feat: restructured project